Fixed the images and spacing issue

--- a/src/root.css
+++ b/src/root.css
@@ -1353,9 +1353,9 @@ body {
   .vertical-centered-flex-container,
   .article-card-layout-blogs {
     grid-template-columns: 1fr;
-    grid-template-rows: 570px;
+    grid-template-rows: 514px !important;
     gap: 20px;
-    grid-auto-rows: 570px;
+    grid-auto-rows: 514px !important;
   }
   .products:not(.productrelatddiv .products) {
     grid-template-columns: 1fr;
@@ -6812,5 +6812,31 @@ button:hover:not(.button-with-icon2) {
 @media (max-width: 980px) {
   .contact-info-text-style-nav {
     border-bottom: none !important;
+  }
+}
+@keyframes spinStars {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.vision-container1 svg {
+  scale: 0.7;
+  animation: spinStars 10s linear infinite;
+}
+
+.order-process-child img {
+  height: 35px;
+}
+.fifth-child img {
+  margin-top: 5px !important;
+  margin-bottom: -5px !important;
+}
+@media (max-width: 670px) {
+  .fifth-child img {
+    margin-top: 0px !important;
+    margin-bottom: -0px !important;
   }
 }
